[package]
name = "tossicat"
version = "0.1.0"
edition = "2021"
authors = ["Jae-Hwan Chung <dialektike@gmail.com>","Jess <dev.bearabbit@gmail.com>"]
description = "TossiCat core is ~."
license = "LGPL-2.1"

[lib]
name = "library"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
