[package]
name = "tossicat"
version = "0.3.2"
edition = "2021"
authors = ["Jae-Hwan Chung <dialektike@gmail.com>","Jess <dev.bearabbit@gmail.com>"]
description = "입력된 단어에 맞게 같이 입력된 토시(조사)를 적절하게 변환하는 라이브러리"
license = "LGPL-2.1"
keywords = ["hangul", "hangeul", "library", "lib"]
categories = ["development-tools", "text-processing"]
exclude = ["main.rs", "/docs"] #crates.io에 업로드할 때 제외할 파일
repository = "https://github.com/tossicat/tossicat-core"
documentation = "https://docs.rs/tossicat"
homepage = "https://github.com/tossicat/tossicat-core/blob/master/README.md"

[lib]
name = "tossicat"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
